--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.19.1",
+    "bcrypt": "^5.1.1",
+    "next-auth": "^4.24.7",
+    "react-icons": "^5.3.0",
     "zustand": "^5.0.0-rc.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2"
   }
 }
