--- a/studio_rental_web/package.json
+++ b/studio_rental_web/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.19.1",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "next": "14.2.9",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
@@ -18,6 +22,7 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -25,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.9",
     "postcss": "^8.4.45",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
