--- a/studio_rental_web/.env
+++ b/studio_rental_web/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://imran:imran2005@cluster07.8svs6.mongodb.net/test?retryWrites=true&w=majority"
-NEXTAUTH_SECRET="NEXTATH_SECRET"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
