--- a/studio_rental_web/package.json
+++ b/studio_rental_web/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
