feat: Enhance listing creation process- Implemented step 3: Added Counter components for listing quantity.- Implemented step 4: Integrated image upload functionality using Cloudinary CDN.- Implemented step 5: Added fields for description and price, and established the POST route for listing creation.

--- a/studio_rental_web/.env
+++ b/studio_rental_web/.env
@@ -10,3 +10,5 @@ GITHUB_ID=Ov23li0ZQ2NLWIj0zgDy
 GITHUB_SECRET=6a6da6bd4c3e38be8c501401ee6cf8ec6bfa8c0d
 GOOGLE_CLIENT_ID=348494696975-dvc2r29eh3l7qnqj0ej41irfctciuvt9.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dsirdl4or"
+NEXT_PUBLIC_CLOUDINARY_API_KEY=""
