--- a/studio_rental_web/.env
+++ b/studio_rental_web/.env
@@ -3,7 +3,7 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+NEXTAUTH_URL=http://localhost:3000
 DATABASE_URL="mongodb+srv://imran:imran2005@cluster07.8svs6.mongodb.net/test?retryWrites=true&w=majority"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 GITHUB_ID=Ov23li0ZQ2NLWIj0zgDy
@@ -11,4 +11,3 @@ GITHUB_SECRET=6a6da6bd4c3e38be8c501401ee6cf8ec6bfa8c0d
 GOOGLE_CLIENT_ID=348494696975-dvc2r29eh3l7qnqj0ej41irfctciuvt9.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dsirdl4or"
-NEXT_PUBLIC_CLOUDINARY_API_KEY=""
