--- a/studio_rental_web/package.json
+++ b/studio_rental_web/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.19.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
     "leaf": "^1.0.1",
     "leaflet": "^1.9.4",
     "next": "^14.2.13",
