--- a/studio_rental_web/package.json
+++ b/studio_rental_web/package.json
@@ -22,6 +22,7 @@
     "query-string": "^9.1.0",
     "react": "^18",
     "react-country-flag": "^3.1.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
@@ -36,6 +37,7 @@
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
