--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bcrypt": "^5.1.1",
     "next-auth": "^4.24.7",
     "react-icons": "^5.3.0",
+    "react-spinners": "^0.14.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
